Bug 1545823 - Implement non-standard CSSStyleSheet.rules, CSSStyleSheet.addRule and CSSStyleSheet.removeRule. r=bzbarsky

It's not worth dying on this hill. Both Blink and WebKit pass the tests.

(Well, WebKit actually fails one of the latest ones I wrote, cssRules and rules
are not the same JS object, WebKit returns a new rule list. I'll file)

Spec PR in https://github.com/w3c/csswg-drafts/pull/3900.

Differential Revision: https://phabricator.services.mozilla.com/D30348

--HG--
extra : moz-landing-system : lando